# actionflow

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
actionflow/: __init__.py  __main__.py  action.py  cli.py  common.py  context.py  core.py  exceptions.py  jobs.py  logger.py  models.py  net.py  server.py  settings.py  tools.py
actionflow/actions/: container.py  download.py  examples.py  fs.py  git.py  images.py  upload.py
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md
examples/: test.yaml
kinetik/: __init__.py  __main__.py  action.py  cli.py  common.py  context.py  core.py  exceptions.py  flow.py  jobs.py  logger.py  server.py  settings.py  tools.py
kinetik/actions/: base.py  examples.py
search/: search_index.json
tests/: test_actions.py  test_groupby.py
